tests/snapshot/parser/snapshots/snapshot__InstanceCreationExpression.snap
---
source: tests/snapshot/snapshot_test.rs
---
└──Compilation Unit
    └──Class InstaceCreationExpression
        └──Method unqualified_class_instance_creation
            ├──Type
            │   └──void
            └──Block
                ├──NewInstance
                │   └──Type
                │       └──String
                ├──NewInstance
                │   ├──Type
                │   │   └──Integer
                │   └──int 5
                ├──NewInstance
                │   ├──Type
                │   │   └──String
                │   └──NewInstance
                │       ├──Type
                │       │   └──String
                │       └──String "abc"
                ├──VariableDeclaration
                │   ├──Type
                │   │   └──String
                │   └──s
                │       └── +
                │           ├──NewInstance
                │           │   ├──Type
                │           │   │   └──String
                │           │   └──String "hi"
                │           └──NewInstance
                │               ├──Type
                │               │   └──String
                │               └──String "there"
                └──MethodInvocation
                    ├──Target
                    │   └──NewInstance
                    │       └──Type
                    │           └──String
                    ├──Name
                    │   └──compareTo
                    └──Args
                        └──NewInstance
                            └──Type
                                ├──java
                                ├──lang
                                └──String
