tests/snapshot/parser/snapshots/snapshot__InterfaceMembers.snap
---
source: tests/snapshot/snapshot_test.rs
---
└──Compilation Unit
    └──Interface InterfaceMembers
        ├──Field declaration []
        │   ├──Type
        │   │   └──int
        │   ├──A
        │   │   └──int 1
        │   └──B
        │       └──int 2
        ├──Field declaration [Public, Static, Final]
        │   ├──Type
        │   │   └──int
        │   └──C
        │       └──int 3
        ├──Method m1 [Private, Static]
        │   ├──Type
        │   │   └──void
        │   └──Block
        ├──Method m2 [Public, Abstract]
        │   ├──Type
        │   │   └──int
        │   ├──Param x
        │   │   └──Type
        │   │       └──int
        │   └──;
        ├──Method m3 []
        │   ├──Type
        │   │   └──int
        │   ├──Param x
        │   │   └──Type
        │   │       └──int
        │   ├──Param y
        │   │   └──Type
        │   │       └──int
        │   └──Block
        │       └──ReturnStatement
        │           └──int 0
        └──Class InnerClass []
            ├──Field declaration []
            │   ├──Type
            │   │   └──int
            │   └──x
            └──Method foo []
                ├──Type
                │   └──void
                └──Block
