tests/snapshot/parser/snapshots/snapshot__MemberAccess.snap
---
source: tests/snapshot/snapshot_test.rs
---
└──Compilation Unit
    └──Class MemberAccess
        ├──Method member_access
        │   ├──Type
        │   │   └──void
        │   └──Block
        │       ├──MemberAccess
        │       │   ├──field: b
        │       │   └──target:
        │       │       └──a
        │       ├──MemberAccess
        │       │   ├──field: d
        │       │   └──target:
        │       │       └──MemberAccess
        │       │           ├──field: c
        │       │           └──target:
        │       │               └──MemberAccess
        │       │                   ├──field: b
        │       │                   └──target:
        │       │                       └──a
        │       ├──MemberAccess
        │       │   ├──field: b
        │       │   └──target:
        │       │       └──a
        │       ├──MemberAccess
        │       │   ├──field: c
        │       │   └──target:
        │       │       └──MemberAccess
        │       │           ├──field: b
        │       │           └──target:
        │       │               └──a
        │       ├──Assignment =
        │       │   ├──MemberAccess
        │       │   │   ├──field: b
        │       │   │   └──target:
        │       │   │       └──a
        │       │   └──UnaryMinus
        │       │       └──MemberAccess
        │       │           ├──field: d
        │       │           └──target:
        │       │               └──c
        │       ├──Assignment =
        │       │   ├──MemberAccess
        │       │   │   ├──field: z
        │       │   │   └──target:
        │       │   │       └──MemberAccess
        │       │   │           ├──field: y
        │       │   │           └──target:
        │       │   │               └──x
        │       │   └── +
        │       │       ├──MemberAccess
        │       │       │   ├──field: c
        │       │       │   └──target:
        │       │       │       └──MemberAccess
        │       │       │           ├──field: b
        │       │       │           └──target:
        │       │       │               └──a
        │       │       └──MemberAccess
        │       │           ├──field: e
        │       │           └──target:
        │       │               └──d
        │       └──Assignment *=
        │           ├──MemberAccess
        │           │   ├──field: c
        │           │   └──target:
        │           │       └──MemberAccess
        │           │           ├──field: b
        │           │           └──target:
        │           │               └──a
        │           └──MemberAccess
        │               ├──field: e
        │               └──target:
        │                   └──d
        ├──Method method_invocation
        │   ├──Type
        │   │   └──void
        │   └──Block
        │       ├──MethodInvocation
        │       │   ├──Target
        │       │   │   └──MemberAccess
        │       │   │       ├──field: out
        │       │   │       └──target:
        │       │   │           └──System
        │       │   ├──Name
        │       │   │   └──println
        │       │   └──Args
        │       │       └──String "Hello, world!"
        │       ├──MethodInvocation
        │       │   ├──Target
        │       │   │   └──System
        │       │   └──Name
        │       │       └──currentTimeMillis
        │       ├──MethodInvocation
        │       │   ├──Target
        │       │   │   └──Math
        │       │   ├──Name
        │       │   │   └──max
        │       │   └──Args
        │       │       ├──int 1
        │       │       └──MethodInvocation
        │       │           ├──Target
        │       │           │   └──Math
        │       │           ├──Name
        │       │           │   └──abs
        │       │           └──Args
        │       │               └──UnaryMinus
        │       │                   └──int 1
        │       ├──MethodInvocation
        │       │   ├──Target
        │       │   │   └──MethodInvocation
        │       │   │       ├──Target
        │       │   │       │   └──String "hello"
        │       │   │       └──Name
        │       │   │           └──toUpperCase
        │       │   └──Name
        │       │       └──trim
        │       ├──MethodInvocation
        │       │   ├──Target
        │       │   │   └──MethodInvocation
        │       │   │       ├──Target
        │       │   │       │   └──String "test"
        │       │   │       ├──Name
        │       │   │       │   └──substring
        │       │   │       └──Args
        │       │   │           ├──int 0
        │       │   │           └──int 2
        │       │   └──Name
        │       │       └──toLowerCase
        │       ├──VariableDeclaration
        │       │   ├──Type
        │       │   │   └──int
        │       │   └──x
        │       │       └── +
        │       │           ├──MethodInvocation
        │       │           │   ├──Target
        │       │           │   │   └──Math
        │       │           │   ├──Name
        │       │           │   │   └──abs
        │       │           │   └──Args
        │       │           │       └──UnaryMinus
        │       │           │           └──int 5
        │       │           └──MethodInvocation
        │       │               ├──Target
        │       │               │   └──Math
        │       │               ├──Name
        │       │               │   └──max
        │       │               └──Args
        │       │                   ├──int 1
        │       │                   └──int 2
        │       └──VariableDeclaration
        │           ├──Type
        │           │   └──int
        │           └──y
        │               └── *
        │                   ├──MethodInvocation
        │                   │   ├──Target
        │                   │   │   └──String "abc"
        │                   │   └──Name
        │                   │       └──length
        │                   └──MethodInvocation
        │                       ├──Target
        │                       │   └──Math
        │                       ├──Name
        │                       │   └──min
        │                       └──Args
        │                           ├──int 2
        │                           └──int 3
        └──Method array_access
            ├──Type
            │   └──void
            └──Block
