tests/snapshot/parser/snapshots/snapshot__Modifiers.snap
---
source: tests/snapshot/snapshot_test.rs
---
└──Compilation Unit
    └──Class Modifiers
        ├──Modifiers
        │   ├──Annotation
        │   │   └──Name
        │   │       ├──Modifiers
        │   │       └──Marker
        │   ├──public
        │   └──abstract
        ├──Field declaration
        │   ├──Modifiers
        │   │   ├──Annotation
        │   │   │   ├──Name
        │   │   │   │   └──Single
        │   │   │   └──Value
        │   │   │       └──int 1
        │   │   ├──public
        │   │   └──volatile
        │   ├──Type
        │   │   └──int
        │   └──a
        ├──Field declaration
        │   ├──Modifiers
        │   │   ├──protected
        │   │   ├──static
        │   │   └──transient
        │   ├──Type
        │   │   └──int
        │   └──b
        ├──Field declaration
        │   ├──Modifiers
        │   │   ├──private
        │   │   └──final
        │   ├──Type
        │   │   └──int
        │   └──c
        │       └──int 1
        ├──Constructor declaration
        │   ├──Modifiers
        │   │   ├──Annotation
        │   │   │   ├──Name
        │   │   │   │   └──Single
        │   │   │   └──Value
        │   │   │       └── +
        │   │   │           ├──int 5
        │   │   │           └──int 10
        │   │   └──public
        │   ├──Param a
        │   │   └──Type
        │   │       └──int
        │   └──ConstructorBody
        │       └──Epilogue
        │           └──TryStatement
        │               ├──TryBlock
        │               └──ExceptionHandlers
        │                   └──CatchClause
        │                       ├──e
        │                       └──CatchType
        │                           ├──Type
        │                           │   └──Error
        │                           │       └──Modifiers
        │                           │           ├──Annotation
        │                           │           │   └──Name
        │                           │           │       └──Marker
        │                           │           └──final
        │                           └──Type
        │                               └──RuntimeException
        │                                   └──Modifiers
        │                                       └──Annotation
        │                                           ├──Name
        │                                           │   └──Single
        │                                           └──Value
        │                                               └──int 1
        ├──Method abstractMethod
        │   ├──Modifiers
        │   │   ├──Annotation
        │   │   │   ├──Name
        │   │   │   │   └──Normal
        │   │   │   └──Value
        │   │   │       ├──Pair
        │   │   │       │   ├──Name
        │   │   │       │   │   └──x
        │   │   │       │   └──Value
        │   │   │       │       └──int 2
        │   │   │       └──Pair
        │   │   │           ├──Name
        │   │   │           │   └──y
        │   │   │           └──Value
        │   │   │               └──Annotation
        │   │   │                   ├──Name
        │   │   │                   │   └──InnerAnno
        │   │   │                   └──Value
        │   │   │                       └──Pair
        │   │   │                           ├──Name
        │   │   │                           │   └──a
        │   │   │                           └──Value
        │   │   │                               ├──int 1
        │   │   │                               ├──int 2
        │   │   │                               └──int 3
        │   │   ├──public
        │   │   └──abstract
        │   ├──Type
        │   │   └──void
        │   └──;
        ├──Method staticMethod
        │   ├──Modifiers
        │   │   ├──protected
        │   │   ├──static
        │   │   └──strictfp
        │   ├──Type
        │   │   └──void
        │   ├──Param x
        │   │   ├──Type
        │   │   │   └──int
        │   │   └──Modifiers
        │   │       ├──Annotation
        │   │       │   └──Name
        │   │       │       └──Marker
        │   │       └──final
        │   └──Block
        │       └──VariableDeclaration
        │           ├──Modifiers
        │           │   └──final
        │           ├──Type
        │           │   └──int
        │           └──y
        │               └── +
        │                   ├──x
        │                   └──int 1
        ├──Method nativeMethod
        │   ├──Modifiers
        │   │   └──native
        │   ├──Type
        │   │   └──void
        │   └──;
        ├──Class Inner
        │   ├──Modifiers
        │   │   ├──sealed
        │   │   ├──Annotation
        │   │   │   ├──Name
        │   │   │   │   └──Normal
        │   │   │   └──Value
        │   │   │       ├──Pair
        │   │   │       │   ├──Name
        │   │   │       │   │   └──x
        │   │   │       │   └──Value
        │   │   │       │       └──int 1
        │   │   │       └──Pair
        │   │   │           ├──Name
        │   │   │           │   └──y
        │   │   │           └──Value
        │   │   │               └──Annotation
        │   │   │                   ├──Name
        │   │   │                   │   └──InnerAnno
        │   │   │                   └──Value
        │   │   │                       └──Pair
        │   │   │                           ├──Name
        │   │   │                           │   └──a
        │   │   │                           └──Value
        │   │   │                               └──int 1
        │   │   ├──public
        │   │   └──static
        │   ├──Permits
        │   │   └──Type
        │   │       └──InnerChild
        │   ├──Field declaration
        │   │   ├──Modifiers
        │   │   │   └──private
        │   │   ├──Type
        │   │   │   └──int
        │   │   └──x
        │   └──Method method
        │       ├──Modifiers
        │       │   ├──Annotation
        │       │   │   ├──Name
        │       │   │   │   └──Single
        │       │   │   └──Value
        │       │   │       └──int 3
        │       │   ├──public
        │       │   ├──final
        │       │   └──synchronized
        │       ├──Type
        │       │   └──void
        │       ├──VarArg param
        │       │   ├──Type
        │       │   │   └──int
        │       │   └──Modifiers
        │       │       └──final
        │       └──Block
        │           └──VariableDeclaration
        │               ├──Modifiers
        │               │   ├──Annotation
        │               │   │   ├──Name
        │               │   │   │   └──Normal
        │               │   │   └──Value
        │               │   │       ├──Pair
        │               │   │       │   ├──Name
        │               │   │       │   │   └──x
        │               │   │       │   └──Value
        │               │   │       │       └──int 4
        │               │   │       └──Pair
        │               │   │           ├──Name
        │               │   │           │   └──y
        │               │   │           └──Value
        │               │   │               └──Annotation
        │               │   │                   ├──Name
        │               │   │                   │   └──InnerAnno
        │               │   │                   └──Value
        │               │   │                       └──Pair
        │               │   │                           ├──Name
        │               │   │                           │   └──a
        │               │   │                           └──Value
        │               │   └──final
        │               ├──Type
        │               │   └──ArrayType
        │               │       └──Type
        │               │           └──int
        │               └──local
        │                   └──param
        ├──Class InnerChild
        │   ├──Modifiers
        │   │   ├──non-sealed
        │   │   ├──static
        │   │   └──strictfp
        │   └──Extends
        │       └──Type
        │           └──Inner
        ├──@interface Marker
        │   └──Modifiers
        │       ├──static
        │       └──public
        ├──@interface Single
        │   ├──Modifiers
        │   │   └──Annotation
        │   │       └──Name
        │   │           └──Marker
        │   └──Method value
        │       ├──Type
        │       │   └──int
        │       └──;
        ├──@interface Normal
        │   ├──Method x
        │   │   ├──Type
        │   │   │   └──int
        │   │   └──;
        │   └──Method y
        │       ├──Modifiers
        │       │   ├──Annotation
        │       │   │   └──Name
        │       │   │       └──Marker
        │       │   └──abstract
        │       ├──Type
        │       │   └──InnerAnno
        │       └──;
        ├──@interface InnerAnno
        │   └──Method a
        │       ├──Modifiers
        │       │   └──public
        │       ├──Type
        │       │   └──ArrayType
        │       │       └──Type
        │       │           └──int
        │       └──;
        ├──Enum E
        │   ├──Modifiers
        │   │   ├──Annotation
        │   │   │   └──Name
        │   │   │       └──Marker
        │   │   └──protected
        │   ├──Constants
        │   │   └──A
        │   │       └──Modifiers
        │   │           └──Annotation
        │   │               ├──Name
        │   │               │   └──Single
        │   │               └──Value
        │   │                   └──int 1
        │   └──Body
        ├──RecordDeclaration R
        │   ├──Modifiers
        │   │   ├──Annotation
        │   │   │   └──Name
        │   │   │       └──Marker
        │   │   ├──private
        │   │   └──static
        │   ├──Implements
        │   │   └──Type
        │   │       └──I
        │   ├──Components
        │   │   ├──a
        │   │   │   ├──Type
        │   │   │   │   └──int
        │   │   │   └──Modifiers
        │   │   │       └──Annotation
        │   │   │           └──Name
        │   │   │               └──Marker
        │   │   └──varargs b
        │   │       ├──Type
        │   │       │   └──int
        │   │       └──Modifiers
        │   │           └──Annotation
        │   │               └──Name
        │   │                   └──Marker
        │   └──Body
        │       └──Compact Constructor declaration
        │           ├──Modifiers
        │           │   └──Annotation
        │           │       ├──Name
        │           │       │   └──Single
        │           │       └──Value
        │           │           └──int 1
        │           └──ConstructorBody
        └──Interface I
            ├──Modifiers
            │   ├──Annotation
            │   │   └──Name
            │   │       └──Marker
            │   ├──protected
            │   └──sealed
            └──Permits
                └──Type
                    └──R
            ├──Field declaration
            │   ├──Modifiers
            │   │   ├──Annotation
            │   │   │   ├──Name
            │   │   │   │   └──Single
            │   │   │   └──Value
            │   │   │       └──int 5
            │   │   ├──static
            │   │   └──final
            │   ├──Type
            │   │   └──int
            │   └──X
            │       └──int 10
            └──Method foo
                ├──Modifiers
                │   ├──Annotation
                │   │   └──Name
                │   │       └──Marker
                │   ├──default
                │   └──strictfp
                ├──Type
                │   └──void
                └──Block
