tests/snapshot/parser/snapshots/snapshot__PermitsIdentifier.snap
---
source: tests/snapshot/snapshot_test.rs
---
└──Compilation Unit
    └──Class PermitsIdentifier
        ├──Field declaration
        │   ├──Type
        │   │   ├──com
        │   │   ├──permits
        │   │   └──Type
        │   └──permits
        ├──Method permits
        │   ├──Type
        │   │   ├──com
        │   │   ├──permits
        │   │   └──Type
        │   ├──Param permits
        │   │   └──Type
        │   │       ├──com
        │   │       ├──permits
        │   │       └──Type
        │   └──Block
        │       └──ReturnStatement
        │           └──permits
        ├──Method method2
        │   ├──Type
        │   │   ├──com
        │   │   ├──permits
        │   │   └──Type
        │   └──Block
        │       ├──VariableDeclaration
        │       │   ├──Type
        │       │   │   └──int
        │       │   └──permits
        │       │       └──int 1
        │       ├──Assignment =
        │       │   ├──permits
        │       │   └── +
        │       │       ├──permits
        │       │       └──int 1
        │       ├──VariableDeclaration
        │       │   ├──Type
        │       │   │   ├──com
        │       │   │   ├──permits
        │       │   │   └──Type
        │       │   └──a
        │       ├──VariableDeclaration
        │       │   ├──Type
        │       │   │   └──int
        │       │   └──c
        │       │       └── +
        │       │           ├──MemberAccess
        │       │           │   ├──field: value
        │       │           │   └──target:
        │       │           │       └──Type
        │       │           └──MemberAccess
        │       │               ├──field: value
        │       │               └──target:
        │       │                   └──MemberAccess
        │       │                       ├──field: Type
        │       │                       └──target:
        │       │                           └──MemberAccess
        │       │                               ├──field: permits
        │       │                               └──target:
        │       │                                   └──com
        │       └──ReturnStatement
        │           └──NewInstance
        │               └──Type
        │                   ├──com
        │                   ├──permits
        │                   └──Type
        ├──Enum per
        │   ├──Constants
        │   │   └──permits
        │   └──Body
        ├──Enum E2
        │   ├──Constants
        │   │   └──permits
        │   │       └──Args
        │   │           └──int 1
        │   └──Body
        │       └──Constructor declaration
        │           ├──Param permits
        │           │   └──Type
        │           │       └──int
        │           └──ConstructorBody
        ├──Enum E3
        │   ├──Constants
        │   │   └──permits
        │   │       └──Body
        │   │           └──Field declaration
        │   │               ├──Type
        │   │               │   └──int
        │   │               └──permits
        │   │                   └──int 1
        │   └──Body
        └──Enum E4
            ├──Constants
            │   └──permits
            │       ├──Args
            │       │   └──int 2
            │       └──Body
            │           └──Field declaration
            │               ├──Type
            │               │   └──int
            │               └──permits
            │                   └──int 2
            └──Body
                └──Constructor declaration
                    ├──Param permits
                    │   └──Type
                    │       └──int
                    └──ConstructorBody
