tests/snapshot/parser/snapshots/snapshot__RecordIdentifier.snap
---
source: tests/snapshot/snapshot_test.rs
---
└──Compilation Unit
    └──Class RecordIdentifier
        ├──Field declaration
        │   ├──Type
        │   │   └──int
        │   └──record
        ├──Field declaration
        │   ├──Type
        │   │   ├──record
        │   │   └──Type
        │   └──field1
        ├──Field declaration
        │   ├──Type
        │   │   ├──com
        │   │   ├──record
        │   │   └──Type
        │   └──field2
        ├──Method record
        │   ├──Type
        │   │   └──int
        │   ├──Param record
        │   │   └──Type
        │   │       └──int
        │   └──Block
        │       └──ReturnStatement
        │           └──record
        ├──Method method1
        │   ├──Type
        │   │   ├──record
        │   │   └──Type
        │   ├──Param record
        │   │   └──Type
        │   │       ├──record
        │   │       └──Type
        │   └──Block
        │       └──ReturnStatement
        │           └──null
        ├──Method method2
        │   ├──Type
        │   │   ├──com
        │   │   ├──record
        │   │   └──Type
        │   └──Block
        │       ├──VariableDeclaration
        │       │   ├──Type
        │       │   │   └──int
        │       │   └──record
        │       │       └──int 1
        │       ├──Assignment =
        │       │   ├──record
        │       │   └── +
        │       │       ├──record
        │       │       └──int 1
        │       ├──MethodInvocation
        │       │   ├──Name
        │       │   │   └──record
        │       │   └──Args
        │       │       └──record
        │       ├──VariableDeclaration
        │       │   ├──Type
        │       │   │   ├──record
        │       │   │   └──Type
        │       │   └──a
        │       ├──VariableDeclaration
        │       │   ├──Type
        │       │   │   ├──com
        │       │   │   ├──record
        │       │   │   └──Type
        │       │   └──b
        │       ├──VariableDeclaration
        │       │   ├──Type
        │       │   │   └──int
        │       │   └──c
        │       │       └── +
        │       │           ├──MemberAccess
        │       │           │   ├──field: value
        │       │           │   └──target:
        │       │           │       └──MemberAccess
        │       │           │           ├──field: Type
        │       │           │           └──target:
        │       │           │               └──record
        │       │           └──MemberAccess
        │       │               ├──field: value
        │       │               └──target:
        │       │                   └──MemberAccess
        │       │                       ├──field: Type
        │       │                       └──target:
        │       │                           └──MemberAccess
        │       │                               ├──field: record
        │       │                               └──target:
        │       │                                   └──com
        │       └──ReturnStatement
        │           └──null
        ├──Enum E1
        │   ├──Constants
        │   │   └──record
        │   └──Body
        ├──Enum E2
        │   ├──Constants
        │   │   └──record
        │   │       └──Args
        │   │           └──int 1
        │   └──Body
        │       └──Constructor declaration
        │           ├──Param x
        │           │   └──Type
        │           │       └──int
        │           └──ConstructorBody
        ├──Enum E3
        │   ├──Constants
        │   │   └──record
        │   │       └──Body
        │   │           └──Field declaration
        │   │               ├──Type
        │   │               │   └──int
        │   │               └──x
        │   │                   └──int 1
        │   └──Body
        └──Enum E4
            ├──Constants
            │   └──record
            │       ├──Args
            │       │   └──int 2
            │       └──Body
            │           └──Field declaration
            │               ├──Type
            │               │   └──int
            │               └──y
            │                   └──int 2
            └──Body
                └──Constructor declaration
                    ├──Param x
                    │   └──Type
                    │       └──int
                    └──ConstructorBody
