tests/snapshot/parser/snapshots/snapshot__Records.snap
---
source: tests/snapshot/snapshot_test.rs
---
└──Compilation Unit
    └──RecordDeclaration R0
        ├──Components
        │   ├──x
        │   │   └──Type
        │   │       └──int
        │   └──y
        │       └──Type
        │           └──String
        └──Body
            ├──Field declaration
            │   ├──Modifiers
            │   │   ├──static
            │   │   └──final
            │   ├──Type
            │   │   └──int
            │   └──CONST
            │       └──int 10
            ├──Compact Constructor declaration
            │   └──ConstructorBody
            │       └──Epilogue
            │           └──Assignment =
            │               ├──x
            │               └──int 0
            ├──Constructor declaration
            │   ├──Modifiers
            │   │   └──public
            │   └──ConstructorBody
            │       └──ConstructorInvocation
            │           └──int 1
            ├──Constructor declaration
            │   ├──Param x
            │   │   └──Type
            │   │       └──int
            │   └──ConstructorBody
            │       └──ConstructorInvocation
            │           ├──x
            │           └──String "default"
            ├──Method value
            │   ├──Type
            │   │   └──int
            │   └──Block
            │       └──ReturnStatement
            │           └──x
            ├──Method f
            │   ├──Modifiers
            │   │   └──static
            │   ├──Type
            │   │   └──int
            │   └──Block
            │       └──ReturnStatement
            │           └──int 1
            ├──Class InnerClass
            ├──Interface InnerInterface
            ├──RecordDeclaration InnerRecord1
            │   ├──Modifiers
            │   │   ├──public
            │   │   └──static
            │   ├──Components
            │   └──Body
            │       └──Constructor declaration
            │           ├──Modifiers
            │           │   └──public
            │           └──ConstructorBody
            └──RecordDeclaration InnerRecord2
                ├──Components
                │   └──varargs xs
                │       └──Type
                │           └──int
                └──Body
